# cicd-orchestrator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
deployment/: init.sql  nginx.conf
src/cicd_orchestrator/: __init__.py  cli.py  main.py
src/cicd_orchestrator/api/: __init__.py
src/cicd_orchestrator/api/routers/: __init__.py  analysis.py  health.py  test_endpoints.py  webhooks.py
src/cicd_orchestrator/core/: __init__.py  config.py  database.py  database_setup.py  exceptions.py  handlers.py  lifespan.py  logging.py  middleware.py  routes.py
src/cicd_orchestrator/models/: __init__.py  ai.py  email.py  gitlab.py  orchestrator.py
src/cicd_orchestrator/prompts/: __init__.py  base_system.py  context_builders.py  error_templates.py  prompt_loader.py  version.py
src/cicd_orchestrator/services/: __init__.py  ai_service.py  email_service.py  gitlab_client.py  orchestration_service.py
src/cicd_orchestrator/services/email/: __init__.py  client.py  converter.py  parser.py  service.py
src/cicd_orchestrator/services/gitlab/: __init__.py  base_client.py  client.py  jobs.py  log_processor.py  pipelines.py  projects.py
src/cicd_orchestrator/utils/: mock_data.py
